<resources>
    <string name="app_name">Algorithm Simulator</string>
    <string name="algorithms">Algorithms</string>
    <string name="textview">TextView</string>
    <string name="image_of_animal">image of animal</string>
    <string name="baboon">Baboon</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="insertion_sort">Insertion Sort</string>
    <string name="heap_sort">Heap Sort</string>
    <string name="array">Array</string>
    <string name="queue">Queue</string>
    <string name="stack">Stack</string>
    <string name="list">Lists</string>
    <string name="mergeSort">Merge Sort</string>
    <string name="linearSearch">Linear Search</string>
    <string name="BinarySearch">Binary Search</string>
    <string name="heap">Heap</string>
    <string name="bst">Binary Search Tree</string>
    <string name="next_bu">next_bu</string>
    <string name="pre_bu">pre_bu</string>
    <string name="next">Next</string>
    <string name="pre">Pre</string>
    <string name="reset">Reset</string>
    <string name="Auto">Auto</string>
    <string name="simulator">simulator</string>
    <string name="study">study</string>
    <string name="button">button</string>
    <string name="title_activity_welcome_screen">welcome_screen</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="busort1">Bubble sort is a sorting algorithm used to sort a sequence of numbers</string>
    <string name="busort2">The scale at the right end of the sequence will compare the number on their left and right
        sides.
    </string>
    <string name="busort3">In this case, they will compare 8 and 2</string>
    <string name="busort4">After comparing them, if the number on the right is found to be smaller, the number will be
        swapped.
    </string>
    <string name="busort5">8 is greater than 2 so the numbers do not get swapped.</string>
    <string name="busort6">After the comparison is finished, the scale move one position to the left.</string>
    <string name="busort7">Numbers are compared once again.</string>
    <string name="busort8">This time 2 is smaller than 7 so the numbers get swapped.</string>
    <string name="busort9">The scale move one position to left.</string>
    <string name="busort10">This operation is repeated untill the scale reach the left end of the sequence</string>
    <string name="busort11">The number on the left edge is considered fully sorted.</string>
    <string name="busort12">and the scale is moved back to the right edge.</string>
    <string name="busort13">The same operations are repeated until all of the numbers are fully sorted.</string>
    <string name="busort14">Now sorting is completed.</string>
    <string name="insort1">Insertion sort is a simple sorting algorithm that builds the final sorted array (or list) one
        item at a time.
    </string>
    <string name="insort2">To begin the leftmost number is considered as fully sorted</string>
    <string name="insort3">Next, from the remaining numbers the leftmost number is taken out and compare to the already
        sorted number to its left
    </string>
    <string name="insort4">If the sorted number is larger, the two numbers swap.</string>
    <string name="insort5">Here 3 > 1 so numbers swap</string>
    <string name="insort6">The number reached the left edge, so the number 1 stops moving.</string>
    <string name="insort7">Number 1 is now considered as fully sorted.</string>
    <string name="insort8">Now again the leftmost number from the remaining numbers is taken out and compared to the
        number to its left
    </string>
    <string name="insort9">In this case, 3 is less than 5 so numbers were not swapped</string>
    <string name="insort10">and 5 is considered as fully sorted.</string>
    <string name="insort11">As before, the leftmost number from the remaining numbers is taken out and compared to the
        number to its left
    </string>
    <string name="insort12">In this case, 5 is greater than 2 so numbers were swapped</string>
    <string name="insort13">3 is greater than 2 so numbers were swapped</string>
    <string name="insort14">1 is less than 2. A smaller number is appeared, so the 2 stops moving.</string>
    <string name="insort15">The 2 is now considered as fully sorted.</string>
    <string name="insort16">The same operations are repeated until all of the numbers are fully sorted.</string>
    <string name="insort17">Now sorting is completed.</string>
    <string name="hep1">Heap sort is an algorithm used to sort a sequence of numbers</string>
    <string name="hep2">At first,all the numbers are sorted in a heap. These heaps are constructed so that numbers are
        in descending order.
    </string>
    <string name="hep3">7 is greater than 5</string>
    <string name="hep4">To make heap in descending order 7 has become the root and 5 as child</string>
    <string name="hep5">All the numbers are sorted in a heap. These heaps are constructed so that numbers are in
        descending order.
    </string>
    <string name="hep6">All the numbers have to stored in heap.</string>
    <string name="hep7">Next, the numbers stored in the heap are taken out one by one.</string>
    <string name="hep8">One property of descending heap is that numbers are removed from largest to smallest, so if you line the numbers up in the opposite order from right to left as they get removed, sorting is complete.</string>
    <string name="hep9">All the numbers were removed from the heap, and sorting is complete.</string>
    <string name="mer1">Merge sort is a sorting algorithm used to sort a sequence of numbers</string>
    <string name="mer2">First, the sequence is divided further and further into halves.</string>
    <string name="mer3">The divisions of array is completed. </string>
    <string name="mer4">Next, the divided groups are combined.</string>
    <string name="mer5">When being combined,each group\'s numbers are arranged so that they are ordered from smallest to largest after combination. </string>
    <string name="mer6">When groups with multiple numbers are combined, the first numbers are compared.</string>
    <string name="mer7">In the diagram, first numbers 2 and 3 will be compared.</string>
    <string name="mer8">3 is greater than 2, so the  2 is moved.</string>
    <string name="mer9">The remaining rows  have  their first numbers compared in the same way</string>
    <string name="mer10">3 is less than 5, so the 3 is moved.</string>
    <string name="mer11">5 and 7 will be compared.</string>
    <string name="mer12">5 is less than 7, so the 5 is moved.</string>
    <string name="mer13">The remaining 7 is moved. </string>
    <string name="mer14">The combining of groups is repeated recursively until all the numbers form one group.</string>
    <string name="mer15">Combining is complete, and the sequence has been sorted.</string>
    <string name="mer16">This concludes the explanation of merge sort.</string>
    <string name="sel1">Selection sort is one algorithm used to sort a sequence of numbers.</string>
    <string name="sel2">Using linear search, the smallest value in the  sequence is located. In this case 1 is smallest number in sequence.</string>
    <string name="sel3">The smallest value swaps with the leftmost number and is considered fully sorted</string>
    <string name="sel4">If the smallest value happens to already be in the leftmost position, no operation is carried out.</string>
    <string name="sel5">The same operations are repeated until all of the numbers are fully sorted.</string>
    <string name="sel6">Here, 5 is smallest number and located on leftmost position.</string>
    <string name="sel7">5 is the smallest number located on leftmost position. So no operation happened.</string>
    <string name="sel8">Again the same operations are repeated until all of the numbers are fully sorted.</string>
    <string name="sel9">Now sorting is completed.</string>
    <string name="lin1">Linear search is an algorithm for searching through elements of an array.</string>
    <string name="lin2">Lets try searching for the number</string>
    <string name="lin3">First, we examine the leftmost number in the array.</string>
    <string name="lin4">We compare it with 9, and if it matches, the search ends. If does not match, we examine the next number to the right.</string>
    <string name="lin5">We repeat the comparisons until the 9 is found</string>
    <string name="lin6">We found the number 9, so the search ends.</string>
    <string name="lin7">Linear search is a simple technique for doing repeated comparisons in order from the beginning.</string>
    <string name="lin8">When there is a lot of data, the number of comparisons increases, and it takes more time.</string>
    <string name="bin1">Binary search is an algorithm for searching through elements of a presorted array.</string>
    <string name="bin10">6 = 6, so we found the number we were looking for.</string>
    <string name="bin11">In this way, we see that binary search makes use of a presorted array and continuously halves the numbers to search through, allowing it to search for numbers efficiently.</string>
    <string name="bin2">Lets try searching for the number 6</string>
    <string name="bin3">First, we look at the number in the center of the array. In this case it\'s 5.</string>
    <string name="bin4">We compare 5 to the number 6 that we are searching for. Because 5 is less than 6, we know the number 6 is to the right of number 5.</string>
    <string name="bin5">From the candidates, we remove numbers that are no longer needed.</string>
    <string name="bin6">Again we look at the number in the the center of the remaining array. The this time it\'s number 7.</string>
    <string name="bin7">We compare 7 to 6. Because 6 is less than 7, we know that the number 6 is to the left of 7.</string>
    <string name="bin8">From the candidates, we remove numbers that are no longer needed.</string>
    <string name="bin9">We look at the number in the center of the remaining array. This time it\'s 6.</string>
    <string name="arry1">Arrays are type of data structure and can store multiple values.</string>
    <string name="arry2">Each element can be accessed through its index.</string>
    <string name="arry3">Data is stored sequentially in memory in consecutive locations as shown above.</string>
    <string name="arry4">Because they are stored in consecutive locations, memory addresses can be calculated using their indices, allowing for random access of data.</string>
    <string name="arry5">Adding and deleting data is another feature of arrays carries a high cost compared to lists.</string>
    <string name="arry6">Lets imagine adding Green to 3rd location.</string>
    <string name="arry7">First we secure an additional space at the end of the array.</string>
    <string name="arry8">In order to free up the space needed for the addition, data is shifted one element at a time.</string>
    <string name="arry9">Green is added to the empty space, completing the addition.</string>
    <string name="arry10">When deleting the second element, we first delete the element,</string>
    <string name="arry11">then fill the empty space by shifting the data one element at a time.</string>
    <string name="arry12">Finally, the extra space is deleted, completing the deletion.</string>
    <string name="arry13">This concludes the explanation of arrays</string>
    <string name="stc1">Stacks are one type of data structure.</string>
    <string name="stc2">The structure of a stack can be easily imagined as a pile of objects stacked vertically.</string>
    <string name="stc3">We use the term \"push\" to refer to the act of adding data to a stack.</string>
</resources>