<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/bgcolor"
                                             tools:context=".busort">
    <include layout="@layout/toolbar"
             android:id="@+id/tool_bar"/>


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="302dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/boarder"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/im_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/tool_bar"
            app:layout_constraintVertical_bias="0.012"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.01"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.987" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">
        <Button
                android:id="@+id/reset_bu"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:layout_weight="0.0"
                android:background="@drawable/reset_bu_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.941"
                style="?android:attr/borderlessButtonStyle"/>
        <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/pre"
                android:textColor="@color/white"
                android:background="@drawable/pre_bu_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/reset_bu"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.941"
                tools:text="Pre"
                style="?android:attr/borderlessButtonStyle"/>
        <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1.0"
                android:background="@drawable/next_button_selector"
                android:text="@string/next"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.94"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>